# Driif

Covrr-Push-Api/: Dockerfile  main.py  pyproject.toml
Covrr-Push-Api/.github/workflows/: actions.yaml
Covrr-Push-Api/app/api/routes/: alarm.py  alarm_filelist.py  fault_info.py  file_storage.py  ftp_upload.py  gps.py  heartbeat.py  lbs.py  login_logout.py  obd.py  pass_through.py  trip_info.py
Covrr-Push-Api/app/core/: config.py  logging_config.py
Covrr-Push-Api/app/utils/: dependencies.py
Covrr-Push-Api/manifestfiles/: deployment.yaml
Covrr-Web-App/: .env.dev  .env.prod  Dockerfile  Readme.md  nginx.conf  package.json  tailwind.config.js  webpack.config.js
Covrr-Web-App/.github/workflows/: actions.yaml  webapp-cicd.yml
Covrr-Web-App/manifestfiles/: deployment.yaml  ingress_web.yaml
Covrr-Web-App/public/: index.html
Covrr-Web-App/src/: App.js  index.js  style.scss
Covrr-Web-App/src/apollo/: api.js  refreshToken.js
Covrr-Web-App/src/components/: Carousel.js  EyeIcon.js  Loader.js  SvgIcons.js
Covrr-Web-App/src/config/: apiConfig.js  mapOptions.js
Covrr-Web-App/src/constants/: constants.js
Covrr-Web-App/src/context/: AuthContext.js  ThemeContext.js
Covrr-Web-App/src/data/: sampleData.js
Covrr-Web-App/src/hooks/: useApi.js  useVehicleIcon.js
Covrr-Web-App/src/pages/: Drivers.js  Vehicles.js
Covrr-Web-App/src/routes/: auth_guard.js  private_route.js  route.js
Covrr-Web-App/src/services/: apiService.js  (+2 more)
Terraform/: provider.tf  variables.tf
druid-docker/: docker-compose.yaml
druid-setup-git/: docker-compose.yaml  environment
(+66 files in other folders)
